--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,11 @@
 	<title></title>
 </head>
 <body>
-<h1>HELLO WORLD!!</h1>
+<form>
+  <label>Username:</label><br>
+  <input type="text" name="username"><br>
+  <label>Password:</label><br>
+  <input type="password" name="pwd">
+</form>
 </body>
 </html>
