--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,11 @@
   <label>Username:</label><br>
   <input type="text" name="username"><br>
   <label>Password:</label><br>
-  <input type="password" name="pwd">
+  <input type="password" name="pwd"><br><br><br>
+    <label>Confirm password:</label><br>
+    <input type="password" name="pswd">
+  Form:<input type="text" name="lang">
+
 </form>
 </body>
 </html>
