--- a/hello.html
+++ b/hello.html
@@ -13,7 +13,8 @@
     <label>Confirm password:</label><br>
     <input type="password" name="pswd">
   Form:<input type="text" name="lang">
-
+<input type="text" placeholder="names" name="name"><br>
+	<input type="SAVE">
 </form>
 </body>
 </html>
