--- a/hello.html
+++ b/hello.html
@@ -11,9 +11,17 @@
   <label>Password:</label><br>
   <input type="password" name="pwd"><br><br><br>
     <label>Confirm password:</label><br>
-    <input type="password" name="pswd">
-  Form:<input type="text" name="lang">
-
+    <input type="password" name="pswd"><br><br><br>
+  
+language:<input type="checkbox" name="html">html
+<input type="checkbox" name="php">php
+<input type="checkbox" name="java">java<br><br><br>
+sex:<input type="radio" name="male">male
+<input type="radio" name="famale">female<br><br><br>
+SELECT:<select name="cars">
+	<option value="bmw">BMW</option>
+	<option value="volvo">VOLVO</option>
+</select>
 </form>
 </body>
 </html>
