--- a/hello.html
+++ b/hello.html
@@ -26,6 +26,8 @@ SELECT:<select name="cars">
 </select>
 <input type="text" placeholder="names" name="name"><br>
   <input type="SAVE">
+<input type="text" placeholder="names" name="name"><br>
+  <input type="Submit">	
 =======
 </form>
 </body>
