--- a/hello.html
+++ b/hello.html
@@ -11,8 +11,6 @@
   <label>Password:</label><br>
   <input type="password" name="pwd"><br><br><br>
     <label>Confirm password:</label><br>
-     <input type="password" name="pswd">
-<<<<<<< HEAD
     <input type="password" name="pswd"><br><br><br>
   
 language:<input type="checkbox" name="html">html
@@ -23,12 +21,10 @@ sex:<input type="radio" name="male">male
 SELECT:<select name="cars">
 	<option value="bmw">BMW</option>
 	<option value="volvo">VOLVO</option>
-</select>
-<input type="text" placeholder="names" name="name"><br>
-  <input type="SAVE">
+</select><br><br><br>
 <input type="text" placeholder="names" name="name"><br>
   <input type="Submit">	
-=======
+
 </form>
 </body>
 </html>
