--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<style>
+		body{
+			background:yellow;
+		}
+	</style>
 </head>
 <body>
 <form>
@@ -26,6 +31,6 @@ SELECT:<select name="cars">
   <input type="Submit">	
 
 </form>
-	<p> thi sis nonsense project oooppp!!!!!</p>
+	<p> this is nonsense project ooopppsssss!!!!!</p>
 </body>
 </html>
