--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,10 @@
 	<title></title>
 	<style>
 		body{
-			background:green;
+			background:blue;
+			border-radius: 30px;
+			border-color: brown;
+			text-align: center;
 		}
 	</style>
 </head>
